<resources>
    <string name="app_name">My Shop</string>
    <string name="ic_home">Home</string>
    <string name="ic_notification">Thông báo</string>
    <string name="ic_user">Tôi</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="notification">Thông báo</string>
    <string name="home">Trang chủ</string>
    <string name="account_security">Tài khoản và bảo mật</string>
    <string name="address">Địa chỉ</string>
    <string name="my_shop_account">Tài khoản MyShop</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="product_description">Thông tin chi tiết</string>
    <string name="product_price">Giá bán</string>
    <string name="product_category">Loại</string>
    <string name="product_sell_number">Số lượng bán</string>
    <string name="product_image">Ảnh mô tả</string>
    <string name="add_product">Thêm địa chỉ</string>
    <string-array name="type">
        <item>Tất cả</item>
        <item>Thời trang</item>
        <item>Điện tử</item>
        <item>Sức khỏe</item>
        <item>Sắc đẹp</item>
        <item>Thể thao, du lịch</item>
        <item>Khác</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_search">Tìm kiếm</string>
    <string name="search">Tìm kiếm</string>
    <string name="default_notification_channel_id">1103</string>
    <string-array name="timestamp">
        <item>3 tháng gần nhất</item>
        <item>6 tháng gần nhất</item>
        <item>9 tháng gần nhất</item>
        <item>1 năm gần nhất</item>
    </string-array>
    <string-array name="type_trans">
        <item>Tất cả</item>
        <item>Tiền vào</item>
        <item>Tiền ra</item>
    </string-array>
    <string-array name="sort">
        <item>Mới nhất</item>
        <item>Nổi bật</item>
        <item>Được yêu thích</item>
        <item>Giá tăng dần</item>
        <item>Giá giảm dần</item>
    </string-array>
</resources>