<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.AccountSettingActivity">

    <include
        android:id="@+id/toolbar_account_setting"
        layout="@layout/toolbar_extra" />

    <TextView
        android:id="@+id/txt_account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/toolbar_account_setting"
        android:layout_margin="20dp"
        android:text="Tài khoản"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_account"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/acc_pri_func"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/account_security"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/address_func"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/credit_func"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/my_shop_account"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white_gray"
        android:text="Đăng xuất" />
</RelativeLayout>